--- a/src/main/webapp/com/friendfeed/web/pages/FriendFeedHome.html
+++ b/src/main/webapp/com/friendfeed/web/pages/FriendFeedHome.html
@@ -1,1 +1,43 @@
-<h1>Hello World!</h1>
+<?xml version="1.0" encoding="UTF-8"?>
+<html xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:wicket="http://wicket.apache.org">
+<head>
+<title>FriendFeed</title>
+
+<link rel="stylesheet/less" type="text/css"	href="assets/css/styles.less.css" />
+<script src="assets/js/less-1.3.3.min.js" type="text/javascript"></script>
+<link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css" />
+
+</head>
+<body>
+	<div class="navbar navbar-inverse navbar-fixed-top">
+		<div class="navbar-inner">
+			<div class="container">
+				<button type="button" class="btn btn-navbar" data-toggle="collapse"
+					data-target=".nav-collapse">
+					<span class="icon-bar"></span> <span class="icon-bar"></span> <span
+						class="icon-bar"></span>
+				</button>
+				<a class="brand" href="#">Project name</a>
+				<div class="nav-collapse collapse">
+					<ul class="nav">
+						<li class="active"><a href="#">Home</a></li>
+						<li><a href="#about">About</a></li>
+						<li><a href="#contact">Contact</a></li>
+					</ul>
+				</div>
+				<!--/.nav-collapse -->
+			</div>
+		</div>
+	</div>
+
+	<div class="container">
+
+		<h1>Bootstrap starter template</h1>
+		<p>
+			<span wicket:id="message"/>
+		</p>
+
+	</div>
+</body>
+</html>
