--- a/src/main/webapp/com/friendfeed/web/pages/FriendFeedHome.html
+++ b/src/main/webapp/com/friendfeed/web/pages/FriendFeedHome.html
@@ -6,8 +6,10 @@
 
 <link rel="stylesheet/less" type="text/css"	href="assets/css/styles.less.css" />
 <script src="assets/js/less-1.3.3.min.js" type="text/javascript"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js" type="text/javascript"></script>
+<script src="assets/js/bootstrap.min.js" type="text/javascript"></script>
 <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css" />
-
+<link rel="stylesheet" type="text/css" href="assets/css/sprites.css" />
 </head>
 <body>
     <span wicket:id="user">[Top Panel]</span>
