--- a/src/main/webapp/com/friendfeed/web/panel/TopPanel.html
+++ b/src/main/webapp/com/friendfeed/web/panel/TopPanel.html
@@ -33,42 +33,7 @@
 	</div>
 	<br />
 
-	<div id="login" class="modal hide fade" tabindex="-1" role="dialog"
-		aria-labelledby="loginLabel" aria-hidden="true">
-		<div class="modal-header">
-			<button type="button" class="close" data-dismiss="modal"
-				aria-hidden="true">×</button>
-			<h3 id="loginLabel">Login to FriendFeed</h3>
-		</div>
-		<div class="modal-body">
-			<p>Please select your login provider:</p>
-			<ul class="nav nav-tabs">
-  				<li class="active"><a href="#username" data-toggle="tab"><i class="icon-user"/> Username</a></li>
-  				<li><a href="#twitter" data-toggle="tab"><img src="assets/img//twitter-bird-white-on-blue.png" width="15" height="15"/> Twitter</a></li>
-  				<li><a href="#facebook" data-toggle="tab"><img src="assets/img/f_logo.png" width="15" height="15" /> Facebook</a></li>
-  				<li><a href="#google" data-toggle="tab"><img src="assets/img/google_search.png" width="15" height="15" /> Google</a></li>
-			</ul>
-			
-			<div class="tab-content">
-  				<div class="tab-pane active" id="username">
-  					<form class="form-signin">
-	  					<input type="text" class="input-block-level" placeholder="Email address">
-	  					<input type="password" class="input-block-level" placeholder="Password">
-	  					<label class="checkbox">
-          					<input type="checkbox" value="remember-me"> Remember me
-        				</label>
-        				<button class="btn btn-medium btn-primary" type="submit">Sign in</button>
-  					</form>
-				</div>
-  				<div class="tab-pane" id="twitter">
-  					<div align="center">
-  						<img src="assets/img/sign-in-with-twitter-gray.png" />
-  					</div>
-				</div>
-  				<div class="tab-pane" id="facebook">Soon...</div>
-  				<div class="tab-pane" id="google">Soon...</div>
-			</div>
-		</div>
-	</div>
+	<span wicket:id="signInPanel" />
+
 </wicket:panel>
 </html>
