--- a/src/main/webapp/com/friendfeed/web/panel/SignInPanel.html
+++ b/src/main/webapp/com/friendfeed/web/panel/SignInPanel.html
@@ -20,9 +20,9 @@
 			
 			<div class="tab-content">
   				<div class="tab-pane active" id="username">
-  					<form class="form-signin" >
-	  					<input type="text" class="input-block-level"  placeholder="Email address">
-	  					<input type="password" class="input-block-level"  placeholder="Password">
+  					<form class="form-signin" wicket:id="signInForm">
+	  					<input type="text" class="input-block-level" wicket:id="username" placeholder="Email address">
+	  					<input type="password" class="input-block-level" wicket:id="password" placeholder="Password">
 	  					<label class="checkbox">
           					<input type="checkbox" value="remember-me"> Remember me
         				</label>
