Home page now lists the application's users.

--- a/src/main/webapp/com/friendfeed/web/pages/FriendFeedHome.html
+++ b/src/main/webapp/com/friendfeed/web/pages/FriendFeedHome.html
@@ -20,6 +20,14 @@
 		<p>
 			<span wicket:id="message"/>
 		</p>
+		
+		<p>
+			<ul>
+			<span wicket:id="users">
+   				<li><span wicket:id="label">label</span></li>
+			</span>
+			</ul>
+		</p>
 
 	</div>
 </body>
