Added FeedbackError panel, also now using the new authentication

--- a/src/main/webapp/com/friendfeed/web/pages/FriendFeedHome.html
+++ b/src/main/webapp/com/friendfeed/web/pages/FriendFeedHome.html
@@ -9,12 +9,14 @@
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js" type="text/javascript"></script>
 <script src="assets/js/bootstrap.min.js" type="text/javascript"></script>
 <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css" />
-<link rel="stylesheet" type="text/css" href="assets/css/sprites.css" />
 </head>
 <body>
     <span wicket:id="user">[Top Panel]</span>
-
+    
+	
 	<div class="container">
+
+		<span wicket:id="feedbackError" />
 
 		<h1>Bootstrap starter template</h1>
 		<p>
