Images can now be placed as static assets.

--- a/src/main/webapp/com/friendfeed/web/pages/FriendFeedHome.html
+++ b/src/main/webapp/com/friendfeed/web/pages/FriendFeedHome.html
@@ -13,7 +13,7 @@
 
 		<span wicket:id="feedbackError" />
 
-		<h1>Bootstrap starter template</h1>
+		<h1>FriendFeed</h1>
 		<p>
 			<span wicket:id="message"/>
 		</p>
@@ -25,7 +25,7 @@
 			</span>
 			</ul>
 		</p>
-
+		
 	</div>
 </body>
 </html>
