--- a/src/main/webapp/com/friendfeed/web/panel/SignInPanel.html
+++ b/src/main/webapp/com/friendfeed/web/panel/SignInPanel.html
@@ -13,9 +13,9 @@
 			<p>Please select your login provider:</p>
 			<ul class="nav nav-tabs">
   				<li class="active"><a href="#username" data-toggle="tab"><i class="icon-user"/> Username</a></li>
-  				<li><a href="#twitter" data-toggle="tab"><img src="assets/img//twitter-bird-white-on-blue.png" width="15" height="15"/> Twitter</a></li>
-  				<li><a href="#facebook" data-toggle="tab"><img src="assets/img/f_logo.png" width="15" height="15" /> Facebook</a></li>
-  				<li><a href="#google" data-toggle="tab"><img src="assets/img/google_search.png" width="15" height="15" /> Google</a></li>
+  				<li><a href="#twitter" data-toggle="tab"><img wicket:id="twitterLogo" width="15" height="15"/> Twitter</a></li>
+  				<li><a href="#facebook" data-toggle="tab"><img wicket:id="facebookLogo" width="15" height="15" /> Facebook</a></li>
+  				<li><a href="#google" data-toggle="tab"><img wicket:id="googleLogo" width="15" height="15" /> Google</a></li>
 			</ul>
 			
 			<div class="tab-content">
@@ -31,7 +31,7 @@
 				</div>
   				<div class="tab-pane" id="twitter">
   					<div align="center">
-  						<img src="assets/img/sign-in-with-twitter-gray.png" />
+  						<img wicket:id="twitterSignIn" />
   					</div>
 				</div>
   				<div class="tab-pane" id="facebook">Soon...</div>
