Added SignUp page. Improvements towards making the pages stateless

--- a/src/main/webapp/com/friendfeed/web/panel/TopPanel.html
+++ b/src/main/webapp/com/friendfeed/web/panel/TopPanel.html
@@ -14,8 +14,7 @@
 				<div class="nav-collapse collapse">
 					<ul class="nav">
 						<li class="active"><a href="#">Home</a></li>
-						<li><a href="#about" wicket:id="createUserLink">Create
-								User</a></li>
+						<li><a href="#about">Create	User</a></li>
 						<li><a href="#contact">Contact</a></li>
 					</ul>
 				</div>
@@ -23,7 +22,8 @@
 				<p class="navbar-text pull-right">
 					<span wicket:id="username" />
 					<span wicket:id="loginLink">
-						<a href="#login" role="button" data-toggle="modal">Login</a>
+						<a href="#login" role="button" data-toggle="modal">Login</a> - 
+						<a href="/signup">Sign up</a>
 					</span> 
 					<a href="#" wicket:id="logoutLink">Logout</a>
 				</p>
