--- a/src/main/webapp/com/friendfeed/web/panel/TopPanel.html
+++ b/src/main/webapp/com/friendfeed/web/panel/TopPanel.html
@@ -25,7 +25,7 @@
 						<a href="#login" role="button" data-toggle="modal">Login</a> - 
 						<a href="/signup">Sign up</a>
 					</span> 
-					<a href="#" wicket:id="logoutLink">Logout</a>
+					<a href="logout" wicket:id="logoutLink">Logout</a>
 				</p>
 				<!--/.nav-collapse -->
 			</div>
