--- a/src/main/webapp/com/friendfeed/web/panel/TopPanel.html
+++ b/src/main/webapp/com/friendfeed/web/panel/TopPanel.html
@@ -10,12 +10,11 @@
 					<span class="icon-bar"></span> <span class="icon-bar"></span> <span
 						class="icon-bar"></span>
 				</button>
-				<a class="brand" href="#">Project name</a>
+				<a class="brand" href="#">FriendFeed</a>
 				<div class="nav-collapse collapse">
 					<ul class="nav">
 						<li class="active"><a href="#">Home</a></li>
-						<li><a href="#about">Create	User</a></li>
-						<li><a href="#contact">Contact</a></li>
+						<li><a href="/contact">Contact Us</a></li>
 					</ul>
 				</div>
 
