--- a/src/main/webapp/com/friendfeed/web/panel/SignInPanel.html
+++ b/src/main/webapp/com/friendfeed/web/panel/SignInPanel.html
@@ -21,7 +21,7 @@
 			<div class="tab-content">
   				<div class="tab-pane active" id="username">
   					<form class="form-signin" wicket:id="signInForm">
-	  					<input type="text" class="input-block-level" wicket:id="username" placeholder="Email address">
+	  					<input type="text" class="input-block-level" wicket:id="username" placeholder="Username">
 	  					<input type="password" class="input-block-level" wicket:id="password" placeholder="Password">
 	  					<label class="checkbox">
           					<input type="checkbox" value="remember-me"> Remember me
