--- a/src/main/webapp/com/friendfeed/web/panel/TopPanel.html
+++ b/src/main/webapp/com/friendfeed/web/panel/TopPanel.html
@@ -13,8 +13,9 @@
 				<a class="brand" href="#">FriendFeed</a>
 				<div class="nav-collapse collapse">
 					<ul class="nav">
-						<li class="active"><a href="#">Home</a></li>
+						<li><a href="/">Home</a></li>
 						<li><a href="/contact">Contact Us</a></li>
+						<li><a href="/users/manage" wicket:id="manageUsersLink">Manage Users</a></li>
 					</ul>
 				</div>
 
